<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Red Drop - Blood Donor Finder</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id2">818931195488-jpp6t01gidvp5d7qukbbu02mpjmgcneh.apps.googleusercontent.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="enter_comment">Enter comment..</string>
    <string name="emergency">Emergency</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="terms_condition">Terms Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="not_added_yet">Not added yet!</string>


</resources>