<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/thirdColor"
    android:layout_height="match_parent"
    tools:context="LoginActivity">
    <ImageView
        android:id="@+id/topLgo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:src="@drawable/red_drop_logo_dark"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>
    <ImageView
        android:id="@+id/secondLgo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/topLgo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/blood_cartoon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/secondLgo"
        android:background="@drawable/top_corner_bg_primary">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="30dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:src="@drawable/red_drop_logo_white"/>
            <EditText
                android:inputType="textEmailAddress|textWebEmailAddress"
                android:id="@+id/lemailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="#595959"
                android:textColor="@color/black"
                android:hint="@string/your_email_address"
                android:background="@drawable/lgoin_btn_bg"/>
            <EditText
                android:id="@+id/lpassId"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="#595959"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:background="@drawable/lgoin_btn_bg"/>
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">
                <Button
                    android:textAllCaps="false"
                    android:fontFamily="@font/roboto_regular"
                    android:id="@+id/signBtnId"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/third_btn"
                    android:text="@string/log_in"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:layout_marginEnd="10dp"/>
                <Button
                    android:textAllCaps="false"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:background="@drawable/third_btn"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:onClick="signupPage"
                    tools:ignore="UsingOnClickInXml" />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:fontFamily="@font/roboto_regular"
                android:layout_height="wrap_content"
                android:text="@string/emergency"
                android:background="@drawable/secondary_btn"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:onClick="Emergency"
                tools:ignore="UsingOnClickInXml" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:onClick="forgotPage"
                android:textColor="@color/thirdColor"
                android:layout_marginTop="10dp"
                tools:ignore="UsingOnClickInXml" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_in_with"
                android:textColor="@color/thirdColor"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
              />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <ImageView
                    android:visibility="gone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/facebook"/>
                <ImageView
                    android:onClick="googleLogin"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/g_plus"
                    tools:ignore="UsingOnClickInXml" />
                <ImageView
                    android:visibility="gone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/twitter"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="@color/thirdColor"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:onClick="termsPage"
                    android:text="@string/terms_condition"
                    android:textColor="@color/thirdColor"
                    tools:ignore="RtlHardcoded,UsingOnClickInXml" />
                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/privacy_policy"
                    android:onClick="privacyPage"
                    android:textColor="@color/thirdColor"
                    tools:ignore="UsingOnClickInXml" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contact_us"
                    android:gravity="end"
                    android:onClick="contactPage"
                    android:textColor="@color/thirdColor"
                    tools:ignore="UsingOnClickInXml" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>